fix icon chatbot on mobile.

--- a/src/app/layouts/public-layout/public-layout.component.scss
+++ b/src/app/layouts/public-layout/public-layout.component.scss
@@ -47,7 +47,7 @@
     height: 30px;
   }
   .bot{
-    bottom: 140px;
+    bottom: 20px;
     width: 56px;
     height: 56px;
   }
